# twillo-callbot-tauri

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: tauri-release.yml
scripts/: start-front-if-needed.mjs
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
배포 가이드/: README.md
